syntax = "proto3";

option java_package = "service1security";
option java_multiple_files = true;
option java_outer_classname = "SecurityAccessImpl";

service Service1{

	rpc getSecurityCode(CodeRequest) returns (CodeResponse) {}

}

message CodeRequest {
	string enterCode = 1;
}

message CodeResponse {
	string checkCode = 1;
}